[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/LevelSelector/LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://Menus/BG.png" type="Texture" id=2]
[ext_resource path="res://Menus/MenuButton/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/LevelSelector/LevelButton/LevelButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/OptionsOverlay/OptionsOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/MenuText.tscn" type="PackedScene" id=6]

[node name="LevelSelector" type="Container" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 373.0
margin_top = 197.0
margin_right = 405.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -373.0
margin_top = -197.0
margin_right = 267.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
_sections_unfolded = [ "Visibility" ]

[node name="BackButton" parent="." index="1" instance=ExtResource( 3 )]

margin_left = -148.0
margin_top = 59.0
margin_right = 76.0
margin_bottom = 95.0

[node name="Label" parent="BackButton" index="0"]

margin_right = 1205.0
text = "back"

[node name="LevelButtons" type="Container" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Z Index" ]

[node name="Level1Button" parent="LevelButtons" index="0" instance=ExtResource( 4 )]

margin_left = -277.0
margin_top = -101.0
margin_right = -117.0
margin_bottom = -69.0

[node name="Label" parent="LevelButtons/Level1Button" index="0"]

text = "level 1"

[node name="Level2Button" parent="LevelButtons" index="1" instance=ExtResource( 4 )]

margin_left = -53.0
margin_top = -101.0
margin_right = 107.0
margin_bottom = -69.0
levelId = 2

[node name="Label" parent="LevelButtons/Level2Button" index="0"]

text = "level 2"

[node name="Level3Button" parent="LevelButtons" index="2" instance=ExtResource( 4 )]

margin_left = -277.0
margin_top = -5.0
margin_right = -117.0
margin_bottom = 27.0
levelId = 3

[node name="Label" parent="LevelButtons/Level3Button" index="0"]

text = "level 3"

[node name="Level4Button" parent="LevelButtons" index="3" instance=ExtResource( 4 )]

margin_left = -53.0
margin_top = -5.0
margin_right = 107.0
margin_bottom = 27.0
levelId = 4

[node name="Label" parent="LevelButtons/Level4Button" index="0"]

text = "level 4"

[node name="OptionsOverlay" parent="." index="3" instance=ExtResource( 5 )]

visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 32.0
margin_bottom = 29.0
_sections_unfolded = [ "Pause", "Visibility" ]

[node name="Level Selection Title" parent="." index="4" instance=ExtResource( 6 )]

margin_left = -138.0
margin_top = -164.0
margin_right = 435.0
margin_bottom = -38.0
text = "level selection"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]


[editable path="BackButton"]
[editable path="LevelButtons/Level1Button"]
[editable path="LevelButtons/Level2Button"]
[editable path="LevelButtons/Level3Button"]
[editable path="LevelButtons/Level4Button"]
